--- a/app/assets/stylesheets/views/_home.scss
+++ b/app/assets/stylesheets/views/_home.scss
@@ -5,7 +5,7 @@
   bottom: 0px;
 
   @include respond-below($media-580) {
-    top: 58px;
+    top: 54px;
   }
 
   #home-cover-area {
@@ -25,7 +25,7 @@
       position: absolute;
       left: 50%;
       top: 20%;
-      width: 480px;
+      width: 520px;
       margin-left: -240px;
       text-align: center;
       @include respond-below($media-480) {
@@ -62,6 +62,7 @@
       font-size: 16px;
       margin-bottom: 20px;
       text-shadow: 0px 1px 1px #333;
+      line-height: 20px;
 
       @include respond-below($media-580) {
         font-size: 15px;
