Put flash notice framework in place and cleaned up new leaders form.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
 
       <%= render partial: 'layouts/header' %>
 
+      <%= render partial: "shared/flash_messages", flash: flash %> 
+
       <%= yield :full_bleed %>
       <%= yield %>
 
