--- a/app/views/leaders/new.html.erb
+++ b/app/views/leaders/new.html.erb
@@ -5,15 +5,16 @@
      
     </div>
     <div class="col-sm-8">
-      <h1 class='sublistheading'>Add Veteran Leaders for <%= @company.name %></h1>
+      <h1 class='sublistheading'>Who are the Veteran Leaders for <%= @company.name %>?</h1>
       <%= simple_form_for(@leader) do |f| %>
         <%= f.error_notification %>
         <%= f.hidden_field :company_id, value: @company.id  %>
 
         <div class="leader-form-inputs">
-          <%= f.input :name, input_html: {name: 'name[]'}, label: 'Veteran Name' %>
-          <%= f.input :url, input_html: {name: 'url[]'}, label: 'LinkedIn URL' %>
+          <%= f.input :name, input_html: {name: 'name[]'}, label: 'Veteran Name', placeholder: 'name' %>
+          <%= f.input :url, input_html: {name: 'url[]'}, label: 'LinkedIn URL', placeholder: 'http://www.linkedin.com/in/veteran-leader' %>
         </div>
+
         <div class="btn add-new-leader-button">Add Another Veteran Leader</div>
 
         <%= f.button :submit, 'Submit Leader(s)', class: 'button-blue submit-button' %>
