--- a/app/assets/stylesheets/foundation/_buttons-janky.scss
+++ b/app/assets/stylesheets/foundation/_buttons-janky.scss
@@ -60,6 +60,7 @@ font:blod !important;
   background-image: none;
   border: 1px solid transparent;
   border-radius: 4px;
+  z-index: 99;
 }
 
 a { color: #1F88A9; text-decoration: none;}
