--- a/app/assets/stylesheets/views/_company.scss
+++ b/app/assets/stylesheets/views/_company.scss
@@ -1,5 +1,5 @@
 .sublistheading {
-  font-family: Goudy Old Style T Bold;
+  font-family: "AvenirNextLTPro";
   color: #009BDA;
   font-size: 24px;
   font-weight: normal;
