--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-inverse ">
   <div>
-    <div class="col-md-4 col-xs-4"> 
+    <div class="col-md-4 col-sm-4 col-xs-3"> 
       <a class="navbar-brand hidden-xs" href="/"><span aria-hidden="true" class="vl-logo-lg"></span></a> 
-      <a class="header-nav-text header-nav-logo-text hidden-xs" href="/">VETERANS LIST</a> 
-      <a class="navbar-brand hidden-sm hidden-md hidden-lg" href="/"><span aria-hidden="true" class="vl-logo"></span></a> 
+      <a class="header-nav-text header-nav-logo-text hidden-xs" href="/">STARTUPS.VET</a> 
+      <a class="navbar-brand hidden-sm hidden-md hidden-lg" href="/"><span aria-hidden="true" class="vl-logo-lg"></span></a> 
     </div>
       
-    <div class="col-md-4 col-xs-4 add-company-button text-center" style="margin-top:1px;">
+    <div class="col-md-4 col-sm-4 col-xs-6 add-company-button text-center" style="margin-top:1px;">
       <%= link_to 'Submit Company', new_company_path, class: 'btn top-btn-color' %>
     </div>
       
@@ -22,9 +22,9 @@
     <div class="navbar-collapse collapse" id="navbar" aria-expanded="false" style="height: 1px;">
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
-        <li><a href="/mission">MISSION</a></li>
-        <li><a href="/companies">LIST</a></li>
-        <li><a href="/research">RESEARCH</a></li>
+        <li><a href="/mission">Mission</a></li>
+        <li><a href="/companies">List</a></li>
+        <li><a href="/research">Research</a></li>
       </ul>
     </div>
    
