--- a/app/views/layouts/_main_nav.html.erb
+++ b/app/views/layouts/_main_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="main-nav">
+<nav class="main-nav hidden-xs">
   <a href="/mission" class="main-nav-btn <%= 'main-nav-btn-active' if @on_mission_page %>">Mission</a>
   <a href="/companies" class="main-nav-btn <%= 'main-nav-btn-active' if @company || @companies %>">List</a>
   <a href="/research" class="main-nav-btn <%= 'main-nav-btn-active' if @on_research_page %>">Research</a>
