--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,16 +4,15 @@
     <title><%= 'Veterans List - Find all Veteran Companies in one place' %></title>
     <meta name="viewport" content="width=device-width, user-scalable=yes">
     <!-- <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" /> -->
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
+    <!-- , 'data-turbolinks-track' => true -->
     <%= csrf_meta_tags %>
   </head>
   <body>
     <section class='main'>
 
       <%= render partial: 'layouts/header' %>
-
-      <%= render partial: "shared/flash_messages", flash: flash %> 
 
       <%= yield :full_bleed %>
       <%= yield %>
