--- a/app/views/leaders/new.html.erb
+++ b/app/views/leaders/new.html.erb
@@ -1,10 +1,9 @@
 <div class="container leaders-form">
 
-  <div class="row" >
-    <div class="col-sm-2"> 
-     
-    </div>
-    <div class="col-sm-8">
+  <div class="form-column" >
+
+    <div class="">
+      <%= render partial: "shared/flash_messages", flash: flash %>
       <h1 class='sublistheading'>Who are the Veteran Leaders for <%= @company.name %>?</h1>
       <%= simple_form_for(@leader) do |f| %>
         <%= f.error_notification %>
