Mission page copy.

--- a/app/views/mission/show.html.erb
+++ b/app/views/mission/show.html.erb
@@ -1,18 +1,18 @@
 <%= render partial: 'layouts/main_nav' %>
 <div class='container'>
-  <div class="row listing">
+  <div class="row listing mission-layout">
       
     <div class="well-second">
       <div class="media">
         <div class="message_top">
-          <p class="media-heading headingfont_mission">Why build a list?</p>
+          <p class="media-heading headingfont_mission">What are we building?</p>
         </div>
         <div class="media-body">
               
-          <p class="subheadingfont_mission">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            
+          <p class="subheadingfont_mission">
+            We are building a dataset to power intelligent analysis of Veteran-led startups. Until now, there is no  comprehensive source of Veteran-led startups and we believe it is time to build it as a community.
+ 
+            As dynamic problem solvers with a unique set of skills and experiences Veterans are high-potential entrepreneurs. The more we understand about Veteran-led companies of scale and impact the more we can do as a community and nation to support future Veteran founders and Veteran business leaders.</p>
         </div>
       </div>
     </div>
@@ -23,12 +23,8 @@
           <p class="media-heading headingfont_mission">Who has access to the list?</p>
         </div>
         <div class="media-body">
-   
-          <p class="subheadingfont_mission">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            
+          <p class="subheadingfont_mission">
+          This dataset is public; built by the community for the community. All we ask is that you share your research and findings with the community.</p>
         </div>
       </div>
     </div>
@@ -40,10 +36,8 @@
         </div>
         <div class="media-body">
           
-          <p class="subheadingfont_mission">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p class="subheadingfont_mission">
+            Patriot Boot Camp has initiated this project and built the alpha version of the platform. The immediate intention is to bring together a coalition of organizations and individuals to build this as a community. This is Day 0, and we believe a lot can be accomplished in the next few months.</p>
         </div>
       </div>
     </div>
@@ -54,11 +48,15 @@
           <p class="media-heading headingfont_mission">What is a Startup?</p>
         </div>
         <div class="media-body">
-          
-          <p class="subheadingfont_mission">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p class="subheadingfont_mission">
+            Good question. Hard question.
+   
+            <a href='http://steveblank.com/2010/01/25/whats-a-startup-first-principles/'>Steve Blank says</a> “a startup is an organization formed to search for a repeatable and scalable business model.”
+             
+            <a href='http://www.paulgraham.com/growth.html'>Paul Graham defines</a> a startup as “a company designed to grow fast.”
+             
+            We will apply those concepts as guidelines for which companies to include on the list. We are open to your ideas and input on how to refine and implement a definition for “what is a startup?”.
+          </p>
         </div>
       </div>
     </div>
@@ -70,10 +68,47 @@
         </div>
         <div class="media-body">
             
-          <p class="subheadingfont_mission">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p class="subheadingfont_mission">
+            It is important to highlight what a “Veteran-Led Startup” is not. It does not meet the definitions of a Veteran Owned Business commonly used by the VA and other government agencies. Why not?
+ 
+            If a startup is a company designed to grow fast, it is common for founders or executive leaders of a startup to own less than 50% of the capital stock. This is a reflection of many factors, but at the core it comes down to sharing equity with investors, employees, partners and advisors creates the required alignment to secure the resources needed to grow fast.
+             
+            This reality means the common definitions of a Veteran Owned Business would make the database of Veteran founded and executive led companies very small, and this would miss the point that Veteran founders and executives at startups are driving major impact.
+             
+            To start this database, we are including companies that participate in programs and associate with organizations supporting Veteran-led Startups. This includes programs like Patriot Boot Camp and The Bunker.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="well-second">
+      <div class="media">
+        <div class="message_top">
+          <p class="media-heading headingfont_mission">How do companies get added to the database?</p>
+        </div>
+        <div class="media-body">
+          <p class="subheadingfont_mission">
+            We’re asking the community to help us find all of the Veteran-Led Startups.
+ 
+            If you know of a startup with a Veteran founder (could be one co-founder or all founders are Veterans) or a startup with a Veteran serving as an executive (CEO, CTO, CFO, COO, President, SVP level, VP level, etc.), please use this site to add that company to the database.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="well-second">
+      <div class="media">
+        <div class="message_top">
+          <p class="media-heading headingfont_mission">What's next?</p>
+        </div>
+        <div class="media-body">
+          <p class="subheadingfont_mission">
+            Once we have the database of the companies, we can start to ask questions: How do Veteran-Led Startups benchmark to the broader startup market? Are they over or underperforming on fundraising, revenue growth, or attracting employees?
+ 
+            When we find some of the answers to these questions and many more, we can educate investors on why they should support more Veteran-Led Startups. Equally as important, organizations like Patriot Boot Camp will learn what help and support Veteran founders and executives need the most.
+             
+            We want the final outcome of this project to be intelligent support of more Veteran-Led Startups, Veteran founders, and Veteran executives.
+          </p>
         </div>
       </div>
     </div>
