--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= 'Veterans List - Find all Veteran Companies in one place' %></title>
+    <title><%= 'Startups.vet - Find all Veteran-led companies in one place' %></title>
     <meta name="viewport" content="width=device-width, user-scalable=yes">
     <!-- <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" /> -->
     <%= stylesheet_link_tag    'application', media: 'all' %>
