Fleshed out research page.

--- a/app/views/research/show.html.erb
+++ b/app/views/research/show.html.erb
@@ -3,57 +3,11 @@
   <div class="row listing">
     <div class="well">
       <div class="media">
-        <div class="message_top"> <a href="#" class="pull-left padding_listing"> <img src="images/latest.jpg" class="media-object"> </a>
-          <p class="media-heading headingfont_mission">PBC Cohort  Analysis</p>
+        <div class="message_top"><a href="#" class="pull-left padding_listing"><%= image_tag "pbc_thumb.png", class: "media-object" %></a>
+          <p class="media-heading headingfont_mission">Patriot Boot Camp - Alumni Performance</p>
         </div>
         <div class="media-body">
-          <p class="subheadingfont_mission">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-            aliquip ex ea commodo consequat. Duis aute irure  dolor in reprehenderit in voluptate velit esse 
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa 
-            qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-      </div>
-    </div>
-    <div class="well">
-      <div class="media">
-        <div class="message_top"> <a href="#" class="pull-left padding_listing"> <img src="images/latest.jpg" class="media-object"> </a>
-          <p class="media-heading headingfont_mission">PBC Cohort  Analysis</p>
-        </div>
-        <div class="media-body">
-          <p class="subheadingfont_mission">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-            aliquip ex ea commodo consequat. Duis aute irure  dolor in reprehenderit in voluptate velit esse 
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa 
-            qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-      </div>
-    </div>
-    <div class="well">
-      <div class="media">
-        <div class="message_top"> <a href="#" class="pull-left padding_listing"> <img src="images/latest.jpg" class="media-object"> </a>
-          <p class="media-heading headingfont_mission">PBC Cohort  Analysis</p>
-        </div>
-        <div class="media-body">
-          <p class="subheadingfont_mission">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-            aliquip ex ea commodo consequat. Duis aute irure  dolor in reprehenderit in voluptate velit esse 
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa 
-            qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-      </div>
-    </div>
-    <div class="well">
-      <div class="media">
-        <div class="message_top"> <a href="#" class="pull-left padding_listing"> <img src="images/latest.jpg" class="media-object"> </a>
-          <p class="media-heading headingfont_mission">PBC Cohort  Analysis</p>
-        </div>
-        <div class="media-body">
-          <p class="subheadingfont_mission">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-            aliquip ex ea commodo consequat. Duis aute irure  dolor in reprehenderit in voluptate velit esse 
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa 
-            qui officia deserunt mollit anim id est laborum.</p>
+          <p class="subheadingfont_mission">An overview of Patriot Boot Camp (PBC) alumni product and service reach, capital raised, and milestones achieved for firm formation and growth. This is the first of a multi-part series of PBC reports. In the future, PBC reports will examine PBC alumni companies at a firm and stage level in comparison to market benchmarks. Additionally, startups.vet and PBC reports will explore a broader basket of Veteran-led startups.</p>
         </div>
       </div>
     </div>
