Need to link to infographic page.

--- a/app/views/research/show.html.erb
+++ b/app/views/research/show.html.erb
@@ -3,7 +3,7 @@
   <div class="row listing">
     <div class="well">
       <div class="media">
-        <div class="message_top"><a href="#" class="pull-left padding_listing"><%= image_tag "pbc_thumb.png", class: "media-object" %></a>
+        <div class="message_top"><a href="/infographic" class="pull-left padding_listing"><%= image_tag "pbc_thumb.png", class: "media-object" %></a>
           <p class="media-heading headingfont_mission">Patriot Boot Camp - Alumni Performance</p>
         </div>
         <div class="media-body">
