Title on research page links to infographic as well.

--- a/app/views/research/show.html.erb
+++ b/app/views/research/show.html.erb
@@ -4,7 +4,7 @@
     <div class="well">
       <div class="media">
         <div class="message_top"><a href="/infographic" class="pull-left padding_listing"><%= image_tag "pbc_thumb.png", class: "media-object" %></a>
-          <p class="media-heading headingfont_mission">Patriot Boot Camp - Alumni Performance</p>
+          <%= link_to "Patriot Boot Camp - Alumni Performance", infographic_path, class: "media-heading headingfont_mission" %>
         </div>
         <div class="media-body">
           <p class="subheadingfont_mission">An overview of Patriot Boot Camp (PBC) alumni product and service reach, capital raised, and milestones achieved for firm formation and growth. This is the first of a multi-part series of PBC reports. In the future, PBC reports will examine PBC alumni companies at a firm and stage level in comparison to market benchmarks. Additionally, startups.vet and PBC reports will explore a broader basket of Veteran-led startups.</p>
