companies not startups yo

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -7,7 +7,7 @@
       <div id="welcome-content">
         <%= render partial: "shared/flash_messages", flash: flash %> 
         <h1 class="welcome-tagline">Connection Builds Community</h1>
-        <h2 class="welcome-subtagline">Identifying Veteran-led Startups is the first step to connecting them</h2>
+        <h2 class="welcome-subtagline">Identifying Veteran-led companies is the first step to connecting them</h2>
         <%= link_to "Submit a Company", new_company_path, class: 'btn button-blue home-submit-company-button new-company-button' %>
       </div>
     </div>
